--- a/book_1/index.html
+++ b/book_1/index.html
@@ -3,10 +3,10 @@
         <title>Тихий Дон. Книга первая</title>
     </head>
     </body>
-        <frame src="feb-web.ru/feb/sholokh/texts/sh0/sh2/sh2-001-.htm?cmd=2"/>
-        <frame src="feb-web.ru/feb/sholokh/texts/sh0/sh2/sh2-005-.htm?cmd=2"/>
-        <frame src="feb-web.ru/feb/sholokh/texts/sh0/sh2/sh2-405-.htm?cmd=2"/>
-        <frame src="feb-web.ru/feb/sholokh/texts/sh0/sh2/sh2-414-.htm?cmd=2"/>
-        <frame src="feb-web.ru/feb/sholokh/texts/sh0/sh2/sh2-415-.htm?cmd=2"/>
+        <frame src="https://feb-web.ru/feb/sholokh/texts/sh0/sh2/sh2-001-.htm?cmd=2"/>
+        <frame src="https://feb-web.ru/feb/sholokh/texts/sh0/sh2/sh2-005-.htm?cmd=2"/>
+        <frame src="https://feb-web.ru/feb/sholokh/texts/sh0/sh2/sh2-405-.htm?cmd=2"/>
+        <frame src="https://feb-web.ru/feb/sholokh/texts/sh0/sh2/sh2-414-.htm?cmd=2"/>
+        <frame src="https://feb-web.ru/feb/sholokh/texts/sh0/sh2/sh2-415-.htm?cmd=2"/>
     </body>
 </html>
