--- a/book_1/index.html
+++ b/book_1/index.html
@@ -14,21 +14,38 @@
             p.small     { text-align: justify; font-size: 80%; text-indent: 1.7em; }
             p.small0    { text-align: justify; font-size: 80%; }
             p.smallot   { text-align: justify; font-size: 80%; text-indent: 1.7em; margin-top: 1em; }
+            p.smallot1	{ text-align: justify; font-size: 80%; text-indent: 1.7em; margin-top: 4em; }
             p.snos      { text-align: justify; text-indent: 1.7em; }
+            p.soder	    { text-align: left; font-size: 80%; margin-top: 1em; }
+            p.sod	    { text-align: left; font-size: 80%; margin-top: 0.5em; }
             p.stih7ot   { text-align: left; font-size: 80%; margin-left: 28%; margin-top: 1em; }
             p.stih8ot   { text-align: left; font-size: 80%; margin-left: 32%; margin-top: 1em; }
             p.stih9ot   { text-align: left; font-size: 80%; margin-left: 36%; margin-top: 1em; }
+            p.str1	    { text-align: right; font-size: 80%; margin-top: 1em; }
+            p.str	    { text-align: right; font-size: 80%; margin-top: 0.5em; }
             p.text      { text-align: justify; text-indent: 1.5em; }
             p.text0     { text-align: justify; }
             p.text0-1   { text-align: justify; margin-top: 1em; }
             p.textitot  { text-align: justify; font-size: 80%; font-style: italic; text-indent: 1.8em; margin-top: 1.5em; }
             p.textot    { text-align: justify; text-indent: 1.5em; margin-top: 1em; }
+            p.zag3	    { text-align: center; font-size: 80%; font-weight: bold; margin-top: 6em; }
+            p.zag6	    { text-align: center; font-size: 60%; }
+            p.zag6-2	{ text-align: center; font-size: 60%; margin-top: 2em; }
             p.zag6itot  { text-align: center; font-size: 60%; font-style: italic; margin-top: 1.5em; }
             p.zag6ot    { text-align: center; font-size: 60%; margin-top: 1em; }
+            p.zag7-4	{ text-align: center; font-size: 70%; font-style: italic; line-height: 160%; margin-top: 4em; }
+            p.zag7ot	{ text-align: center; font-size: 70%; margin-top: 1em; }
+            p.zag7	    { text-align: center; font-size: 70%; }
             p.zag8itspot        { text-align: center; font-size: 80%; font-style: italic; letter-spacing: 0.3em; margin-top: 1em; }
+            p.zagpart	{ text-align: center; font-size: 120%; font-weight: bold; letter-spacing: 0.3em; margin-top: 1em; }
+            p.zagpartot1        { text-align: center; font-size: 120%; font-weight: bold; letter-spacing: 0.3em; margin-top: 4em; }
             p.zagglav   { text-align: center; font-size: 80%; font-weight: bold; }
             p.zagglavot { text-align: center; font-size: 80%; font-weight: bold; margin-top: 2em; }
             p.zagglavot1        { text-align: center; font-size: 80%; font-weight: bold; margin-top: 5em; }
+            p.zagtit1	{ text-align: center; font-size: 180%; font-weight: bold; margin-top: 1em; }
+            p.zagtit2	{ text-align: center; font-weight: bold; letter-spacing: 0.3em; margin-top: 2em; }
+            p.zagtit3	{ text-align: center; font-size: 80%; font-weight: bold; font-style: italic; letter-spacing: 0.3em; margin-top: 1em; }
+            p.zagtit4	{ text-align: center; font-size: 170%; font-weight: bold; margin-top: 5em; }
             p.zagkn     { text-align: center; font-size: 140%; font-weight: bold; letter-spacing: 0.2em; margin-top: 4em; margin-bottom: 3em; }
             p.zagol     { text-align: center; font-size: 120%; font-weight: bold; letter-spacing: 0.2em; margin-top: 1em; }
             p.zagzvez   { text-align: center; font-size: 120%; letter-spacing: 0.5em; margin-top: 1em; }
