modified:   book_1/index.html

--- a/book_1/index.html
+++ b/book_1/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="https://feb-web.ru/feb/common/css/common.css" type="text/css">
+        <!-- <link rel="stylesheet" href="https://feb-web.ru/feb/common/css/common.css" type="text/css"> -->
         <title>Тихий Дон. Книга первая.</title>
         <style>
+            body        { background: #000000; color: #ffff00; }
             p.normal-nyj        { text-align: left; }
             p.epig      { text-align: left; font-size: 80%; margin-top: 1em; }
             p.epig1     { text-align: left; font-size: 80%; margin-left: 8.5em; }
