--- a/book_1/index.html
+++ b/book_1/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <!-- <link rel="stylesheet" href="https://feb-web.ru/feb/common/css/common.css" type="text/css"> -->
+        <link rel="stylesheet" href="style.css" type="text/css">
         <title>Тихий Дон. Книга первая.</title>
         <style>
             body        { background: #000000; color: #ffff00; }
+            a:link      { color: #ff0000; }
             p.normal-nyj        { text-align: left; }
             p.epig      { text-align: left; font-size: 80%; margin-top: 1em; }
             p.epig1     { text-align: left; font-size: 80%; margin-left: 8.5em; }
