modified:   book_1/index.html

--- a/book_1/index.html
+++ b/book_1/index.html
@@ -95,9 +95,10 @@
             <p class="zagtit4">————————————</p>
             <p class="zag6"><em>ГОСУДАРСТВЕННОЕ ИЗДАТЕЛЬСТВО<br></em> <b><em>ХУДОЖЕСТВЕННОЙ ЛИТЕРАТУРЫ</em></b></p>
             <p class="zag6"><i><em>Москва 1956</em></i></p>
+            <p><span class="page" id="$p4">4</span></p>
             <p><span class="page" id="$p5">5</span></p>
             <h4 l="0" title="&lt;Заголовок&gt;" id="Заголовок"></h4>
-            <p class="zagkn"><a href="sh2-405-.htm#">КНИГА ПЕРВАЯ</a></p>
+            <p class="zagkn">КНИГА ПЕРВАЯ</p>
             <p><span class="page" id="$p6">6</span></p>
             <p><span class="page" id="$p7">7</span></p>
             <h4 l="0" title="&lt;Эпиграф&gt;" id="Эпиграф"></h4>
@@ -6115,6 +6116,7 @@
             <p class="text">Ильинична глянула сквозь дверную щель в горницу, вернулась.</p>
             <p class="text">—&nbsp;Вместе.</p>
             <p class="text">—&nbsp;Ну, слава богу! Слава богу! — закрестился старик, приподнимаясь на локте, всхлипывая.</p>
+            <span class="page" id="$p405">405</span>
             <span class="page" id="$p405">405</span>
             <h4 l="0" title="&lt;Заголовок&gt;" id="Заголовок"></h4>
             <p class="zagpartot1">ПРИМЕЧАНИЯ</p>
